@@ -202,6 +202,7 @@ public class CommandParametersAdapter {
                 .handleNullTaskAffinity(configuration.isHandleNullTaskAffinityEnabled())
                 .powerOptCheckEnabled(configuration.isPowerOptCheckForEnabled())
                 .correlationId(parameters.getCorrelationId())
+                .preferredAuthMethod(parameters.getPreferredAuthMethod())
                 .build();
 
         return commandParameters;
