@@ -637,13 +637,13 @@
                 android:text="AT with Device Code Flow" />
 
             <Button
-                android:id="@+id/btnBrokerHelper"
+                android:id="@+id/btn_acquiretokenWithQR"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
                 android:layout_weight="5"
                 android:gravity="center"
-                android:text="Broker Helper" />
+                android:text="@string/at_with_qr_pin" />
 
         </LinearLayout>
 
@@ -669,6 +669,14 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="horizontal">
+            <Button
+                android:id="@+id/btnBrokerHelper"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:layout_weight="5"
+                android:gravity="center"
+                android:text="Broker Helper" />
             <Button
                 android:id="@+id/btnGetActiveBroker"
                 android:layout_width="0dp"
